# rt-trainer

./: .gitignore  LICENSE  README.md  my-custom-theme.ts  package-lock.json  package.json  playwright.config.ts  shell.nix  tailwind.config.ts
common/: bibliography.bib  common.tex  project.tex  titlepage.tex
dissertation/: abstract.tex  background.tex  conclusions.tex  design.tex  dissertation.tex  evaluation.tex  implementation.tex  introduction.tex  prof-ethic-social.tex
my-skeleton-app/: package-lock.json  package.json
progress-report/: background.tex  ethical-consent.tex  introduction.tex  legal-progressional-social-issues.tex  progress-report.tex  progress.tex  project-management.tex
radiocomms-trainer/: .dockerignore  Dockerfile  fly.toml  package-lock.json  package.json  vite.config.ts
rt-resources/: RT Example.docx
rt-trainer-app/: drizzle.config.ts  my-custom-theme.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
rt-webserver/: Cargo.toml  endpoint-tests.txt  package-lock.json
rt-webserver/migrations/: 20231101203043_usercall.sql  20231107155144_usercall2.sql
rt-webserver/src/: controllers.rs  data.rs  errors.rs  generation.rs  helpers.rs  main.rs  models.rs  radiocall.rs
rt-webserver/src/controllers/: generator.rs  radiocall.rs  simulation_controller.rs  user.rs  user_account_controller.rs
rt-webserver/src/data/: aerodromes.rs
rt-webserver/src/generation/: aerodrome_generators.rs  aerodromes.rs  call_parsers.rs  parsers.rs  route_generator.rs  routes.rs  state_generator.rs  states.rs
rt-webserver/src/helpers/: jsoncheckers.rs  phonetics.rs  preprocessors.rs  processors.rs  seedprocessors.rs
rt-webserver/src/models/: aerodrome.rs  radiocall.rs  state.rs  user.rs
rt-webserver/src/parsers/: handshakeparser.rs
specification/: background.tex  gantt.tex  introduction.tex  objectives.tex  project-management.tex  project-managment.tex  specification.tex
tests/: test-1.spec.ts  test-10.spec.ts  test-2.spec.ts  test-3.spec.ts  test-4.spec.ts  test-5.spec.ts  test-6.spec.ts  test-7.spec.ts  test-8.spec.ts  test-9.spec.ts  test.ts
(+282 files in other folders)
