[package]
name = "rt-webserver"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
axum-macros = "0.3.8"
tokio = { version = "1.33", features = ["full"] }
serde = "1.0.190"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"]}

sqlx = { version = "0.7.2", features = ["runtime-tokio-native-tls", "json", "postgres"] }
anyhow = "1.0.75"
serde_json = "1.0.108"
tower-http = { version = "0.4.4", features = ["trace"] }

titlecase = "2.2.1"
fancy-regex = "0.12.0"

rand_distr = "0.4.3"
rand = { version = "0.8.5", features = ["small_rng"] }
