[package]
name = "rt-webserver"
version = "0.0.2"
edition = "2021"

[dependencies]
axum = "0.7.1"
axum-macros = "0.4.0"
tokio = { version = "1.33", features = ["full"] }
serde = "1.0.190"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"]}

sqlx = { version = "0.7.2", features = ["runtime-tokio-native-tls", "json", "postgres"] }
anyhow = "1.0.75"
serde_json = "1.0.108"
tower = "0.4.12"
tower-http = { version = "0.5.0", features = ["trace", "timeout", "cors"] }

titlecase = "2.2.1"
fancy-regex = "0.12.0"

rand_distr = "0.4.3"
rand = { version = "0.8.5", features = ["small_rng"] }
