[package]
name = "rt-webserver"
version = "0.0.2"
edition = "2021"

[dependencies]
axum = "0.7.3"
axum-macros = "0.4.0"
tokio = { version = "1.35.1", features = ["full"] }
serde = "1.0.195"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}

sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "json", "postgres"] }
anyhow = "1.0.75"
serde_json = "1.0.111"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace", "timeout", "cors"] }

titlecase = "2.2.1"
fancy-regex = "0.13.0"

rand_distr = "0.4.3"
rand = { version = "0.8.5", features = ["small_rng"] }
